<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?android:attr/activatedBackgroundIndicator"
    android:paddingBottom="10dp"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/ivActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ivImagenActividad"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="#FFF"/>
    <TextView
        android:id="@+id/tvNombreActividad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNombreActividad"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/ivActividad"
        android:layout_alignRight="@+id/ivActividad"
        android:layout_alignEnd="@+id/ivActividad" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvInicioActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvHorainicioHorario"
            />
            <TextView
                android:id="@+id/tvFinActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvHorafinHorario"
             />
         </LinearLayout>
        <TextView
            android:id="@+id/tvZonaActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvZonaHorario"
         />
    </LinearLayout>
</LinearLayout>