<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clubes.imagencentral.clubes.Fragments.FragmentBuscador">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/que_quieres"
        android:id="@+id/encabezado_buscador"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_buscador"
        android:hint="@string/buscador_hint"
        android:layout_below="@+id/encabezado_buscador"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buscador"
        android:id="@+id/boton_buscador"
        android:layout_below="@+id/input_buscador"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />
</RelativeLayout>