<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="?android:attr/activatedBackgroundIndicator"
    android:paddingBottom="10dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvInicioActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvHorainicioHorario"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
            <TextView
                android:id="@+id/tvFinActividad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvHorafinHorario"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tvZonaActividad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvZonaHorario"
            android:textAppearance="?android:attr/textAppearanceLarge"
            />
</LinearLayout>